force-app/main/default/objects/Financiamento__c/Financiamento__c.object-meta.xml
<CustomObject>
    <label>Financiamento</label>
    <nameField>
        <displayFormat>FIN {000}</displayFormat>
        <label>Nº do Financiamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financiamentos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>