force-app/main/default/objects/Financiamento__c/fields/Observa_es__c.field-meta.xml
<CustomField>
    <fullName>Observa_es__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>