force-app/main/default/objects/Financiamento__c/fields/Tipo_de_Financiamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Financiamento__c</fullName>
    <label>Tipo de Financiamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOSPCOM</fullName>
            </value>
            <value>
                <fullName>INSTITUIÇÕES FINANCEIRAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>