force-app/main/default/objects/Financiamento__c/validationRules/Att_de_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Att_de_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId != &apos;00e5A000001yRA5&apos;,
$User.ProfileId != &apos;00e6e000002JQTI&apos;,
 $User.Ignorar_erros__c = false,
ISCHANGED(Status__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Somente o financeiro pode atualizar o status da análise de crédito.</errorMessage>
</ValidationRule>